@@ -1,2 +1,4 @@
 HWLOC_DEBUG_ALLOW_OVERLAPPING_NODE_CPUSETS=1
 export HWLOC_DEBUG_ALLOW_OVERLAPPING_NODE_CPUSETS
+HWLOC_CPUKINDS_MAXFREQ=1
+export HWLOC_CPUKINDS_MAXFREQ
