@@ -34,11 +34,9 @@ depth 0:           1 Machine (type #0)
        depth 7:    5 PU (type #3)
 Special depth -3:  1 NUMANode (type #13)
 CPU kind #0 efficiency 0 cpuset 0x0000000f
-  FrequencyMaxMHz = 2800
   FrequencyBaseMHz = 1400
   CoreType = IntelAtom
 CPU kind #1 efficiency 1 cpuset 0x00000010
-  FrequencyMaxMHz = 3000
   FrequencyBaseMHz = 2000
   CoreType = IntelCore
 Topology not from this system
